cmake_minimum_required(VERSION 3.15)

#add_subdirectory(AccelTag)
#add_subdirectory(AccelTagNG)
#add_subdirectory(BitTagv5)
add_subdirectory(BitTag)
add_subdirectory(PresTag)
add_subdirectory(BitPresTag)
add_subdirectory(PresTagBreakout)
add_subdirectory(PresTagBMPBreakout)
add_subdirectory(BreakoutDownloadTest)
add_subdirectory(BitTagNG)
add_subdirectory(BitTagNG-lis2du12)
#add_subdirectory(LuxTag)
#add_subdirectory(NucleoTag)
#add_subdirectory(BitTagNG-proto)
